test/files/neg/typed-xml-scala-processing-instruction-1.check
typed-xml-scala-processing-instruction-1.scala:3: error: type mismatch;
 found   : Int(1)
 required: String
    <?scala {val s: String= 1; null}?>
                            ^
typed-xml-scala-processing-instruction-1.scala:7: error: type mismatch;
 found   : Unit
 required: AnyRef
Note: Unit is not implicitly converted to AnyRef.  You can safely
pattern match `x: AnyRef` or cast `x.asInstanceOf[AnyRef]` to do so.
    <?scala {()}?>
             ^
two errors found
